--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,21 @@
 @import url(./blocks/element/__like-sum/element__like-sum.css);
 @import url(./blocks/popup/_card_remove/popup_card_remove.css);
 @import url(./blocks/spinner/spinner.css);
+@import url(./blocks/popup/__auth/popup__auth.css);
+@import url(./blocks/popup/__form/_auth/popup__form_auth.css);
+@import url(./blocks/popup/__title/_auth/popup__title_auth.css);
+@import url(./blocks/popup/__input/_auth/popup__input_auth.css);
+@import url(./blocks/popup/__close-button/_unvisibled/popup__close-button_unvisibled.css);
+@import url(./blocks/popup/__input-conainer/_auth/popup__input-conainer_auth.css);
+@import url(./blocks/popup/__button/_color/popup__button_color.css);
+@import url(./blocks/button-text/button-text.css);
+@import url(./blocks/popup/__button/_unvisible/popup__button_unvisible.css);
+@import url(./blocks/popup/__info-tooltip/popup__info-tooltip.css);
+@import url(./blocks/popup/__text-info-tooltip/popup__text-info-tooltip.css);
+@import url(./blocks/popup/__img-info-tooltip/popup__text-info-tooltip.css);
+@import url(./blocks/popup/__container-info-tooltip/popup__container-info-tooltip.css);
+@import url(./blocks/popup/__title/_unvisible/popup__title_unvisible.css);
+@import url(./blocks/popup/__under-submit-button-text/popup__under-submit-button-text.css);
+@import url(./blocks/footer/_unlogged/footer_unlogged.css);
+@import url(./blocks/button-text/_out/button-text_out.css);
+@import url(./blocks/header/__text-container/header__text-container.css);
