--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,4 +2,6 @@
     max-width: 880px;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
     margin: 0 auto 0;
+    display: flex;
+    justify-content:space-between;
 }
