--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -3,4 +3,6 @@
     margin: 0 auto 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    min-height: 100vh;
+    height: 100%;
 }
