--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -6,6 +6,7 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 @media screen and (max-width: 900px) {
