--- a/src/blocks/footer/_unlogged/footer_unlogged.css
+++ b/src/blocks/footer/_unlogged/footer_unlogged.css
@@ -1,7 +1,6 @@
 .footer_unlogged {
     width: 880px;
-    margin: 0 auto 0;
-    padding: 67px 0 60px;
+    margin: 67px auto 60px;
     display: block;
     position: absolute;
     bottom: 0;
