--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,4 @@
 @import url(./blocks/footer/_unlogged/footer_unlogged.css);
 @import url(./blocks/button-text/_out/button-text_out.css);
 @import url(./blocks/header/__text-container/header__text-container.css);
+@import url(./blocks/popup/__img-info-tooltip-loading/popup__img-info-tooltip-loading.css);
