--- a/src/blocks/footer/_unlogged/footer_unlogged.css
+++ b/src/blocks/footer/_unlogged/footer_unlogged.css
@@ -1,5 +1,5 @@
 .footer_unlogged {
-    width: 880px;
+    max-width: 880px;
     margin: 67px auto 60px;
     display: block;
     position: absolute;
