--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,13 +1,13 @@
 .footer {
-    /* width: 880px; */
+    max-width: 880px; 
     margin: 0 auto 0;
     padding: 67px 0 60px;
-    display: block;
+    display: flex;
+    justify-content: left;
 }
 
 @media screen and (max-width: 900px) {
     .footer {
         padding: 48px 0 48px;
-        width: 100px;
     }
 }
